feat(wip): add responsive design for homepage

--- a/about/index.html
+++ b/about/index.html
@@ -27,7 +27,7 @@
       <section id="header" class="mt-20 mx-[6.25rem]">
         <div class="title">
           <h1 class="title-600-48 text-center">
-            About <span class="color-gradient">Me</span>
+            About <span class="color-gradient-primary">Me</span>
           </h1>
           <p class="body-large-400-18 text-center text-text-muted">
             Learning, building, and becoming along the way
@@ -90,7 +90,7 @@
             class="w-10 h-10 -rotate-8"
           />
           <h2 class="title-600-48">
-            Growth <span class="color-gradient">Stack</span>
+            Growth <span class="color-gradient-primary">Stack</span>
           </h2>
         </div>
         <div class="stack mt-10">
@@ -477,7 +477,7 @@
             class="w-10 h-10 -rotate-8"
           />
           <h2 class="title-600-48">
-            Work <span class="color-gradient">Experience</span>
+            Work <span class="color-gradient-primary">Experience</span>
           </h2>
         </div>
 
@@ -640,7 +640,7 @@
               alt="education-icon"
               class="w-8 h-8 -rotate-8"
             />
-            <h2 class="heading-600-32 color-gradient">Education</h2>
+            <h2 class="heading-600-32 color-gradient-primary">Education</h2>
           </div>
         </div>
         <div class="grid grid-cols-4 mt-10">
