--- a/contact/index.html
+++ b/contact/index.html
@@ -26,7 +26,7 @@
     <main>
       <section class="mt-20 mx-[6.25rem]">
         <div class="title text-center">
-          <h1 class="title-600-48 color-gradient">Contact</h1>
+          <h1 class="title-600-48 color-gradient-primary">Contact</h1>
           <p class="body-large-400-18 text-text-muted">
             Let’s connect! Whether it’s about tech, collaboration, or just
             sharing ideas - here’s where you can reach me.
