--- a/projects/index.html
+++ b/projects/index.html
@@ -29,7 +29,7 @@
     <main>
       <section class="mt-20 mx-[6.25rem]">
         <div class="title text-center">
-          <h1 class="title-600-48 color-gradient">Projects</h1>
+          <h1 class="title-600-48 color-gradient-primary">Projects</h1>
           <p class="body-large-400-18 text-text-muted">
             A collection of projects I’ve built to sharpen my skills and explore
             ideas.
