--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
 
       <section
         id="gallery"
-        class="mt-40 flex gap-4 md:gap-10 overflow-hidden h-70 md:h-120 py-10"
+        class="mt-15 md:mt-40 flex gap-4 md:gap-10 overflow-hidden h-55 md:h-120 py-10"
       >
         <div class="max-w-60 md:max-w-75 max-h-10 md:max-h-75">
           <img
-            class="rotate-2 rounded-xl h-40 w-45 md:h-100 md:w-100"
+            class="rotate-2 rounded-xl h-35 w-45 md:h-100 md:w-100"
             src="https://images.unsplash.com/photo-1625967445189-d35d49a37501?q=80&w=735&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             alt="Semarang City"
           />
@@ -152,7 +152,7 @@
 
         <div class="max-w-60 md:max-w-75 max-h-10 md:max-h-75">
           <img
-            class="rotate-2 rounded-xl h-40 w-45 md:h-100 md:w-100"
+            class="rotate-2 rounded-xl h-35 w-45 md:h-100 md:w-100"
             src="https://images.unsplash.com/photo-1625967445155-bf8cc0412e9b?q=80&w=735&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             alt="semarang-city"
           />
@@ -160,7 +160,7 @@
 
         <div class="max-w-60 md:max-w-75 max-h-10 md:max-h-75">
           <img
-            class="-rotate-2 rounded-xl h-40 w-45 md:h-100 md:w-100"
+            class="-rotate-2 rounded-xl h-35 w-45 md:h-100 md:w-100"
             src="https://images.unsplash.com/photo-1672281699269-86a871c5b2c2?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             alt="makassar-city"
           />
@@ -168,14 +168,14 @@
 
         <div class="max-w-60 md:max-w-75 max-h-10 md:max-h-75">
           <img
-            class="-rotate-2 rounded-xl h-40 w-45 md:h-100 md:w-100"
+            class="-rotate-2 rounded-xl h-35 w-45 md:h-100 md:w-100"
             src="https://images.unsplash.com/photo-1737638423079-5bac4c563ba4?q=80&w=735&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             alt="makassar-city"
           />
         </div>
       </section>
 
-      <section id="projects" class="mt-25 md:mx-25 mx-5">
+      <section id="projects" class="mt-8 md:mt-25 md:mx-25 mx-5">
         <div>
           <h1 class="heading-600-32 md:title-600-48">
             Featured
@@ -190,12 +190,14 @@
           </p>
         </div>
 
-        <div class="projects-list mt-7 md:mt-13 flex flex-col gap-20">
+        <div class="projects-list mt-7 md:mt-13 flex flex-col gap-10 md:gap-20">
           <div
-            class="project-card-left flex flex-col md:flex-row items-start md:justify-between gap-3"
+            class="project-card-left flex flex-col md:flex-row items-start md:justify-between gap-4"
           >
             <div class="md:w-180 order-2 md:order-1">
-              <h1 class="subtitle-600-20 md:subtitle-600-24 mb-1">
+              <h1
+                class="subtitle-600-20 md:subtitle-600-24 mb-1 group-hover:underline"
+              >
                 Bandomega Personal Website
               </h1>
               <h3 class="caption-500-14">
@@ -208,10 +210,14 @@
                   <img
                     src="/images/stack/html5.svg"
                     alt="HTML Icon"
-                    class="w-5"
+                    class="w-4 md:w-5"
                   />
 
-                  <img src="/images/stack/css.svg" class="w-5" alt="CSS Icon" />
+                  <img
+                    src="/images/stack/css.svg"
+                    class="w-4 md:w-5"
+                    alt="CSS Icon"
+                  />
 
                   <img
                     src="/images/stack/bootstrap.svg"
@@ -252,7 +258,7 @@
                   </a>
                 </div>
 
-                <a href="/projects/project-details" class="me-5 md:me-10">
+                <a href="/projects/project-details" class="md:me-10">
                   <div
                     class="flex items-center justify-center gap-1 md:gap-1.5 cursor-pointer hover:underline"
                   >
@@ -276,7 +282,7 @@
           </div>
 
           <div
-            class="project-card-left flex flex-col md:flex-row items-start md:justify-between gap-3"
+            class="project-card-right flex flex-col md:flex-row items-start md:justify-between gap-4"
           >
             <div class="mx-auto">
               <img
@@ -286,7 +292,9 @@
               />
             </div>
             <div class="md:w-180">
-              <h1 class="subtitle-600-20 md:subtitle-600-24 mb-1">
+              <h1
+                class="subtitle-600-20 md:subtitle-600-24 mb-1 group-hover:underline"
+              >
                 Memomate – Daily Notes App
               </h1>
               <h3 class="caption-500-14">
@@ -299,7 +307,7 @@
                   <img
                     src="/images/stack/react.svg"
                     alt="React Icon"
-                    class="w-5"
+                    class="w-4 md:w-5"
                   />
                 </div>
               </div>
@@ -332,7 +340,7 @@
                   </a>
                 </div>
 
-                <a href="/projects/project-details" class="me-5 md:me-10">
+                <a href="/projects/project-details" class="md:me-10">
                   <div
                     class="flex items-center justify-center gap-1 md:gap-1.5 cursor-pointer hover:underline"
                   >
@@ -349,10 +357,12 @@
           </div>
 
           <div
-            class="project-card-left flex flex-col md:flex-row items-start md:justify-between gap-3"
+            class="project-card-left flex flex-col md:flex-row items-start md:justify-between gap-4"
           >
             <div class="md:w-180 order-2 md:order-1">
-              <h1 class="subtitle-600-20 md:subtitle-600-24 mb-1">
+              <h1
+                class="subtitle-600-20 md:subtitle-600-24 mb-1 group-hover:underline"
+              >
                 Mini Library – Book CRUD Application
               </h1>
               <h3 class="caption-500-14">
@@ -365,14 +375,18 @@
                   <img
                     src="/images/stack/html5.svg"
                     alt="HTML Icon"
-                    class="w-5"
+                    class="w-4 md:w-5"
                   />
 
-                  <img src="/images/stack/css.svg" class="w-5" alt="CSS Icon" />
+                  <img
+                    src="/images/stack/css.svg"
+                    class="w-4 md:w-5"
+                    alt="CSS Icon"
+                  />
 
                   <img
                     src="/images/stack/javascript.svg"
-                    class="w-6"
+                    class="w-4 md:w-5"
                     alt="JavaScript Icon"
                   />
                 </div>
@@ -412,7 +426,7 @@
                   </a>
                 </div>
 
-                <a href="/projects/project-details" class="me-5 md:me-10">
+                <a href="/projects/project-details" class="md:me-10">
                   <div
                     class="flex items-center justify-center gap-1 md:gap-1.5 cursor-pointer hover:underline"
                   >
@@ -463,11 +477,13 @@
 
         <div class="blog-list mt-9 md:mt-13">
           <div
-            class="card-blog text-text flex flex-col md:flex-row cursor-pointer gap-6 justify-between items-center mt-10"
+            class="card-blog text-text flex flex-col md:flex-row cursor-pointer gap-6 items-center md:justify-between md:mt-15 mt-8 group"
           >
             <div class="order-2 md:order-1">
               <h4 class="caption-500-14 mb-2 md:mb-4">September 24, 2025</h4>
-              <h1 class="subtitle-600-20 md:subtitle-600-24 mb-1">
+              <h1
+                class="subtitle-600-20 md:subtitle-600-24 mb-1 group-hover:underline"
+              >
                 List Animation using Motion for React
               </h1>
               <p class="body-small-400-14 mb-3">
@@ -493,35 +509,37 @@
                     <p class="caption-500-14">6 min read</p>
                   </div>
                 </div>
-                <div class="tag flex gap-3">
+                <div class="tag flex gap-1 md:gap-3">
                   <h4
-                    class="inline-block body-extra-small-400-12 bg-card py-2 px-4 rounded-xl md:rounded-2xl"
+                    class="block body-extra-small-400-12 bg-card py-1 px-2 md:py-2 md:px-4 rounded-xl md:rounded-2xl hover:bg-bg-light"
                   >
                     React
                   </h4>
                   <h4
-                    class="inline-block body-extra-small-400-12 bg-card py-2 px-4 rounded-xl md:rounded-2xl"
+                    class="inline-block body-extra-small-400-12 bg-card py-1 px-2 md:py-2 md:px-4 rounded-xl md:rounded-2xl hover:bg-bg-light"
                   >
                     Animation
                   </h4>
                 </div>
               </div>
             </div>
-            <div class="order-1 w-full">
+            <div class="order-1 w-full md:w-65">
               <img
                 src="images/blog-image.jpg"
                 alt="Blog Image"
-                class="rounded-lg w-full md:w-50"
+                class="rounded-lg w-full"
               />
             </div>
           </div>
 
           <div
-            class="card-blog text-text flex flex-col md:flex-row cursor-pointer gap-6 justify-between items-center mt-10"
+            class="card-blog text-text flex flex-col md:flex-row cursor-pointer gap-6 items-center md:justify-between md:mt-15 mt-8 group"
           >
             <div class="order-2 md:order-1">
               <h4 class="caption-500-14 mb-2 md:mb-4">September 24, 2025</h4>
-              <h1 class="subtitle-600-20 md:subtitle-600-24 mb-1">
+              <h1
+                class="subtitle-600-20 md:subtitle-600-24 mb-1 group-hover:underline"
+              >
                 List Animation using Motion for React
               </h1>
               <p class="body-small-400-14 mb-3">
@@ -547,35 +565,37 @@
                     <p class="caption-500-14">6 min read</p>
                   </div>
                 </div>
-                <div class="tag flex gap-3">
+                <div class="tag flex gap-1 md:gap-3">
                   <h4
-                    class="inline-block body-extra-small-400-12 bg-card py-2 px-4 rounded-xl md:rounded-2xl"
+                    class="block body-extra-small-400-12 bg-card py-1 px-2 md:py-2 md:px-4 rounded-xl md:rounded-2xl hover:bg-bg-light"
                   >
                     React
                   </h4>
                   <h4
-                    class="inline-block body-extra-small-400-12 bg-card py-2 px-4 rounded-xl md:rounded-2xl"
+                    class="inline-block body-extra-small-400-12 bg-card py-1 px-2 md:py-2 md:px-4 rounded-xl md:rounded-2xl hover:bg-bg-light"
                   >
                     Animation
                   </h4>
                 </div>
               </div>
             </div>
-            <div class="order-1 w-full">
+            <div class="order-1 w-full md:w-65">
               <img
                 src="images/blog-image.jpg"
                 alt="Blog Image"
-                class="rounded-lg w-full md:w-50"
+                class="rounded-lg w-full"
               />
             </div>
           </div>
 
           <div
-            class="card-blog text-text flex flex-col md:flex-row cursor-pointer gap-6 justify-between items-center mt-10"
+            class="card-blog text-text flex flex-col md:flex-row cursor-pointer gap-6 items-center md:justify-between md:mt-15 mt-8 group"
           >
             <div class="order-2 md:order-1">
               <h4 class="caption-500-14 mb-2 md:mb-4">September 24, 2025</h4>
-              <h1 class="subtitle-600-20 md:subtitle-600-24 mb-1">
+              <h1
+                class="subtitle-600-20 md:subtitle-600-24 mb-1 group-hover:underline"
+              >
                 List Animation using Motion for React
               </h1>
               <p class="body-small-400-14 mb-3">
@@ -601,25 +621,25 @@
                     <p class="caption-500-14">6 min read</p>
                   </div>
                 </div>
-                <div class="tag flex gap-3">
+                <div class="tag flex gap-1 md:gap-3">
                   <h4
-                    class="inline-block body-extra-small-400-12 bg-card py-2 px-4 rounded-xl md:rounded-2xl"
+                    class="block body-extra-small-400-12 bg-card py-1 px-2 md:py-2 md:px-4 rounded-xl md:rounded-2xl hover:bg-bg-light"
                   >
                     React
                   </h4>
                   <h4
-                    class="inline-block body-extra-small-400-12 bg-card py-2 px-4 rounded-xl md:rounded-2xl"
+                    class="inline-block body-extra-small-400-12 bg-card py-1 px-2 md:py-2 md:px-4 rounded-xl md:rounded-2xl hover:bg-bg-light"
                   >
                     Animation
                   </h4>
                 </div>
               </div>
             </div>
-            <div class="order-1 w-full">
+            <div class="order-1 w-full md:w-65">
               <img
                 src="images/blog-image.jpg"
                 alt="Blog Image"
-                class="rounded-lg w-full md:w-50"
+                class="rounded-lg w-full"
               />
             </div>
           </div>
@@ -663,7 +683,7 @@
           <div class="flex justify-center items-center mt-10">
             <a
               href="/contact"
-              class="py-3 px-6 bg-button rounded-2xl heading-700-20 md:heading-700-24"
+              class="py-3 px-6 bg-button rounded-2xl heading-700-20 md:heading-700-24 hover:shadow-md shadow-bg-light"
               >Say Hello</a
             >
           </div>
