--- a/index.html
+++ b/index.html
@@ -226,8 +226,11 @@
                   />
                 </div>
               </div>
-              <div class="flex items-center justify-between mt-5">
-                <div class="flex items-center gap-5">
+
+              <div
+                class="flex flex-col md:flex-row md:items-center md:justify-between mt-5"
+              >
+                <div class="flex items-center gap-5 order-2 md:order-1">
                   <a
                     href="https://github.com/bando9/bandomega-portfolio/tree/main"
                     target="_blank"
@@ -258,9 +261,12 @@
                   </a>
                 </div>
 
-                <a href="/projects/project-details" class="md:me-10">
+                <a
+                  href="/projects/project-details"
+                  class="md:me-10 order-1 py-4 md:py-0"
+                >
                   <div
-                    class="flex items-center justify-center gap-1 md:gap-1.5 cursor-pointer hover:underline"
+                    class="flex items-center justify-start gap-1 md:gap-1.5 cursor-pointer hover:underline"
                   >
                     <p class="caption-500-14">View project</p>
                     <img
@@ -311,8 +317,10 @@
                   />
                 </div>
               </div>
-              <div class="flex items-center justify-between mt-5">
-                <div class="flex items-center gap-5">
+              <div
+                class="flex flex-col md:flex-row items-start justify-between mt-5"
+              >
+                <div class="flex items-center gap-5 order-2 md:order-1">
                   <a href="https://github.com/bando9/memomate" target="_blank">
                     <div
                       class="flex items-center justify-center gap-1 md:gap-1.5 cursor-pointer hover:underline"
@@ -340,9 +348,12 @@
                   </a>
                 </div>
 
-                <a href="/projects/project-details" class="md:me-10">
+                <a
+                  href="/projects/project-details"
+                  class="md:me-10 order-1 py-4 md:py-0"
+                >
                   <div
-                    class="flex items-center justify-center gap-1 md:gap-1.5 cursor-pointer hover:underline"
+                    class="flex items-center justify-start gap-1 md:gap-1.5 cursor-pointer hover:underline"
                   >
                     <p class="caption-500-14">View project</p>
                     <img
@@ -391,8 +402,10 @@
                   />
                 </div>
               </div>
-              <div class="flex items-center justify-between mt-5">
-                <div class="flex items-center gap-5">
+              <div
+                class="flex flex-col md:flex-row items-start justify-between mt-5"
+              >
+                <div class="flex items-center gap-5 order-2 md:order-1">
                   <a
                     href="https://github.com/bando9/perpustakaan-mini"
                     target="_blank"
@@ -426,7 +439,10 @@
                   </a>
                 </div>
 
-                <a href="/projects/project-details" class="md:me-10">
+                <a
+                  href="/projects/project-details"
+                  class="md:me-10 order-1 py-4 md:py-0"
+                >
                   <div
                     class="flex items-center justify-center gap-1 md:gap-1.5 cursor-pointer hover:underline"
                   >
@@ -477,7 +493,7 @@
 
         <div class="blog-list mt-9 md:mt-13">
           <div
-            class="card-blog text-text flex flex-col md:flex-row cursor-pointer gap-6 items-center md:justify-between md:mt-15 mt-8 group"
+            class="card-blog text-text flex flex-col md:flex-row cursor-pointer gap-6 items-center md:justify-between md:mt-15 mt-10 group"
           >
             <div class="order-2 md:order-1">
               <h4 class="caption-500-14 mb-2 md:mb-4">September 24, 2025</h4>
@@ -490,7 +506,7 @@
                 An in-depth guide on how to animate enter and exit animation for
                 list using Motion for React (previously Framer Motion).
               </p>
-              <div class="flex justify-between">
+              <div class="flex flex-col md:flex-row md:justify-between">
                 <div class="icon flex gap-5">
                   <div class="flex gap-1 md:gap-1.5 items-center">
                     <img
@@ -509,7 +525,7 @@
                     <p class="caption-500-14">6 min read</p>
                   </div>
                 </div>
-                <div class="tag flex gap-1 md:gap-3">
+                <div class="tag flex gap-1 md:gap-3 mt-3">
                   <h4
                     class="block body-extra-small-400-12 bg-card py-1 px-2 md:py-2 md:px-4 rounded-xl md:rounded-2xl hover:bg-bg-light"
                   >
@@ -523,7 +539,7 @@
                 </div>
               </div>
             </div>
-            <div class="order-1 w-full md:w-65">
+            <div class="order-1 w-full md:w-64">
               <img
                 src="images/blog-image.jpg"
                 alt="Blog Image"
@@ -533,7 +549,7 @@
           </div>
 
           <div
-            class="card-blog text-text flex flex-col md:flex-row cursor-pointer gap-6 items-center md:justify-between md:mt-15 mt-8 group"
+            class="card-blog text-text flex flex-col md:flex-row cursor-pointer gap-6 items-center md:justify-between md:mt-15 mt-10 group"
           >
             <div class="order-2 md:order-1">
               <h4 class="caption-500-14 mb-2 md:mb-4">September 24, 2025</h4>
@@ -546,7 +562,7 @@
                 An in-depth guide on how to animate enter and exit animation for
                 list using Motion for React (previously Framer Motion).
               </p>
-              <div class="flex justify-between">
+              <div class="flex flex-col md:flex-row md:justify-between">
                 <div class="icon flex gap-5">
                   <div class="flex gap-1 md:gap-1.5 items-center">
                     <img
@@ -565,7 +581,7 @@
                     <p class="caption-500-14">6 min read</p>
                   </div>
                 </div>
-                <div class="tag flex gap-1 md:gap-3">
+                <div class="tag flex gap-1 md:gap-3 mt-3">
                   <h4
                     class="block body-extra-small-400-12 bg-card py-1 px-2 md:py-2 md:px-4 rounded-xl md:rounded-2xl hover:bg-bg-light"
                   >
@@ -579,7 +595,7 @@
                 </div>
               </div>
             </div>
-            <div class="order-1 w-full md:w-65">
+            <div class="order-1 w-full md:w-64">
               <img
                 src="images/blog-image.jpg"
                 alt="Blog Image"
@@ -589,7 +605,7 @@
           </div>
 
           <div
-            class="card-blog text-text flex flex-col md:flex-row cursor-pointer gap-6 items-center md:justify-between md:mt-15 mt-8 group"
+            class="card-blog text-text flex flex-col md:flex-row cursor-pointer gap-6 items-center md:justify-between md:mt-15 mt-10 group"
           >
             <div class="order-2 md:order-1">
               <h4 class="caption-500-14 mb-2 md:mb-4">September 24, 2025</h4>
@@ -602,7 +618,7 @@
                 An in-depth guide on how to animate enter and exit animation for
                 list using Motion for React (previously Framer Motion).
               </p>
-              <div class="flex justify-between">
+              <div class="flex flex-col md:flex-row md:justify-between">
                 <div class="icon flex gap-5">
                   <div class="flex gap-1 md:gap-1.5 items-center">
                     <img
@@ -621,7 +637,7 @@
                     <p class="caption-500-14">6 min read</p>
                   </div>
                 </div>
-                <div class="tag flex gap-1 md:gap-3">
+                <div class="tag flex gap-1 md:gap-3 mt-3">
                   <h4
                     class="block body-extra-small-400-12 bg-card py-1 px-2 md:py-2 md:px-4 rounded-xl md:rounded-2xl hover:bg-bg-light"
                   >
@@ -635,7 +651,7 @@
                 </div>
               </div>
             </div>
-            <div class="order-1 w-full md:w-65">
+            <div class="order-1 w-full md:w-64">
               <img
                 src="images/blog-image.jpg"
                 alt="Blog Image"
