--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
                 <a
                   href="/projects/project-details"
-                  class="md:me-10 order-1 py-4 md:py-0"
+                  class="md:me-10 order-1 my-4 md:my-0"
                 >
                   <div
                     class="flex items-center justify-start gap-1 md:gap-1.5 cursor-pointer hover:underline"
@@ -350,7 +350,7 @@
 
                 <a
                   href="/projects/project-details"
-                  class="md:me-10 order-1 py-4 md:py-0"
+                  class="md:me-10 order-1 my-4 md:my-0"
                 >
                   <div
                     class="flex items-center justify-start gap-1 md:gap-1.5 cursor-pointer hover:underline"
@@ -441,7 +441,7 @@
 
                 <a
                   href="/projects/project-details"
-                  class="md:me-10 order-1 py-4 md:py-0"
+                  class="md:me-10 order-1 my-4 md:my-0"
                 >
                   <div
                     class="flex items-center justify-center gap-1 md:gap-1.5 cursor-pointer hover:underline"
@@ -525,14 +525,14 @@
                     <p class="caption-500-14">6 min read</p>
                   </div>
                 </div>
-                <div class="tag flex gap-1 md:gap-3 mt-3">
+                <div class="tag flex gap-2 md:gap-3 mt-3">
                   <h4
-                    class="block body-extra-small-400-12 bg-card py-1 px-2 md:py-2 md:px-4 rounded-xl md:rounded-2xl hover:bg-bg-light"
+                    class="block body-extra-small-400-12 bg-card py-2 px-3 md:py-2 md:px-4 rounded-xl md:rounded-2xl hover:bg-bg-light"
                   >
                     React
                   </h4>
                   <h4
-                    class="inline-block body-extra-small-400-12 bg-card py-1 px-2 md:py-2 md:px-4 rounded-xl md:rounded-2xl hover:bg-bg-light"
+                    class="inline-block body-extra-small-400-12 bg-card py-2 px-3 md:py-2 md:px-4 rounded-xl md:rounded-2xl hover:bg-bg-light"
                   >
                     Animation
                   </h4>
@@ -581,14 +581,14 @@
                     <p class="caption-500-14">6 min read</p>
                   </div>
                 </div>
-                <div class="tag flex gap-1 md:gap-3 mt-3">
+                <div class="tag flex gap-2 md:gap-3 mt-3">
                   <h4
-                    class="block body-extra-small-400-12 bg-card py-1 px-2 md:py-2 md:px-4 rounded-xl md:rounded-2xl hover:bg-bg-light"
+                    class="block body-extra-small-400-12 bg-card py-2 px-3 md:py-2 md:px-4 rounded-xl md:rounded-2xl hover:bg-bg-light"
                   >
                     React
                   </h4>
                   <h4
-                    class="inline-block body-extra-small-400-12 bg-card py-1 px-2 md:py-2 md:px-4 rounded-xl md:rounded-2xl hover:bg-bg-light"
+                    class="inline-block body-extra-small-400-12 bg-card py-2 px-3 md:py-2 md:px-4 rounded-xl md:rounded-2xl hover:bg-bg-light"
                   >
                     Animation
                   </h4>
@@ -637,14 +637,14 @@
                     <p class="caption-500-14">6 min read</p>
                   </div>
                 </div>
-                <div class="tag flex gap-1 md:gap-3 mt-3">
+                <div class="tag flex gap-2 md:gap-3 mt-3">
                   <h4
-                    class="block body-extra-small-400-12 bg-card py-1 px-2 md:py-2 md:px-4 rounded-xl md:rounded-2xl hover:bg-bg-light"
+                    class="block body-extra-small-400-12 bg-card py-2 px-3 md:py-2 md:px-4 rounded-xl md:rounded-2xl hover:bg-bg-light"
                   >
                     React
                   </h4>
                   <h4
-                    class="inline-block body-extra-small-400-12 bg-card py-1 px-2 md:py-2 md:px-4 rounded-xl md:rounded-2xl hover:bg-bg-light"
+                    class="inline-block body-extra-small-400-12 bg-card py-2 px-3 md:py-2 md:px-4 rounded-xl md:rounded-2xl hover:bg-bg-light"
                   >
                     Animation
                   </h4>
