fix(home): improve project-card responsiveness on mobile devices

--- a/index.html
+++ b/index.html
@@ -192,11 +192,19 @@
 
         <div class="projects-list mt-7 md:mt-13 flex flex-col gap-10 md:gap-20">
           <div
-            class="project-card-left flex flex-col md:flex-row items-start md:justify-between gap-4"
+            class="project-card-left flex flex-col md:flex-row items-start md:justify-between gap-6"
           >
-            <div class="md:w-180 order-2 md:order-1">
+            <div class="order-1 w-full md:w-1/2">
+              <img
+                src="/images/project-1.png"
+                alt="Photo Personal Web v1"
+                class="rounded-lg w-full h-auto"
+              />
+            </div>
+
+            <div class="order-2 md:order-1 md:w-1/2">
               <h1
-                class="subtitle-600-20 md:subtitle-600-24 mb-1 group-hover:underline"
+                class="subtitle-600-20 md:subtitle-600-24 mb-2 group-hover:underline"
               >
                 Bandomega Personal Website
               </h1>
@@ -204,264 +212,65 @@
                 A personal portfolio website showcasing projects, GitHub links,
                 and project highlights. Built with HTML5 and Bootstrap.
               </h3>
-              <div class="flex mt-3 gap-2 md:gap-4">
+
+              <div class="flex mt-3 gap-2 md:gap-4 items-center">
                 <h3 class="caption-500-14">Tools:</h3>
                 <div class="flex gap-3">
                   <img
                     src="/images/stack/html5.svg"
                     alt="HTML Icon"
-                    class="w-4 md:w-5"
+                    class="w-5"
                   />
-
-                  <img
-                    src="/images/stack/css.svg"
-                    class="w-4 md:w-5"
-                    alt="CSS Icon"
-                  />
-
+                  <img src="/images/stack/css.svg" alt="CSS Icon" class="w-5" />
                   <img
                     src="/images/stack/bootstrap.svg"
-                    class="w-5"
                     alt="Bootstrap Icon"
+                    class="w-6"
                   />
                 </div>
               </div>
 
               <div
-                class="flex flex-col md:flex-row md:items-center md:justify-between mt-5"
+                class="flex flex-col md:flex-row md:items-center md:justify-between mt-5 gap-4"
               >
                 <div class="flex items-center gap-5 order-2 md:order-1">
                   <a
                     href="https://github.com/bando9/bandomega-portfolio/tree/main"
                     target="_blank"
+                    class="flex items-center gap-1 hover:underline"
                   >
-                    <div
-                      class="flex items-center justify-center gap-1 md:gap-1.5 cursor-pointer hover:underline"
-                    >
-                      <img
-                        src="/images/stack/github.svg"
-                        alt="GitHub Icon"
-                        class="w-4 md:w-5"
-                      />
-                      <p class="caption-500-14">Repository</p>
-                    </div>
-                  </a>
-
-                  <a href="https://v1.bandomega.com/" target="_blank">
-                    <div
-                      class="flex justify-center items-center gap-1 md:gap-1.5 cursor-pointer hover:underline"
-                    >
-                      <img
-                        src="/images/icons/link-1.svg"
-                        alt="Link Icon"
-                        class="w-4 md:w-5"
-                      />
-                      <p class="caption-500-14">Open link sites</p>
-                    </div>
-                  </a>
-                </div>
-
-                <a
-                  href="/projects/project-details"
-                  class="md:me-10 order-1 my-4 md:my-0"
-                >
-                  <div
-                    class="flex items-center justify-start gap-1 md:gap-1.5 cursor-pointer hover:underline"
-                  >
-                    <p class="caption-500-14">View project</p>
                     <img
-                      src="/images/icons/arrow-right.svg"
-                      alt="Arrow right icon"
-                      class="w-4 md:w-5"
+                      src="/images/stack/github.svg"
+                      alt="GitHub Icon"
+                      class="w-5"
                     />
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="order-1 mx-auto">
-              <img
-                src="/images/project-1.png"
-                alt="Photo Personal Web v1"
-                class="rounded-lg"
-              />
-            </div>
-          </div>
-
-          <div
-            class="project-card-right flex flex-col md:flex-row items-start md:justify-between gap-4"
-          >
-            <div class="mx-auto">
-              <img
-                src="/images/project-2.jpg"
-                alt="Photo Memomate"
-                class="rounded-lg"
-              />
-            </div>
-            <div class="md:w-180">
-              <h1
-                class="subtitle-600-20 md:subtitle-600-24 mb-1 group-hover:underline"
-              >
-                Memomate – Daily Notes App
-              </h1>
-              <h3 class="caption-500-14">
-                A simple web app for creating and managing daily notes. Built
-                with ReactJS and modular styling.
-              </h3>
-              <div class="flex mt-3 gap-2 md:gap-4">
-                <h3 class="caption-500-14">Tools:</h3>
-                <div class="flex gap-3">
-                  <img
-                    src="/images/stack/react.svg"
-                    alt="React Icon"
-                    class="w-4 md:w-5"
-                  />
-                </div>
-              </div>
-              <div
-                class="flex flex-col md:flex-row items-start justify-between mt-5"
-              >
-                <div class="flex items-center gap-5 order-2 md:order-1">
-                  <a href="https://github.com/bando9/memomate" target="_blank">
-                    <div
-                      class="flex items-center justify-center gap-1 md:gap-1.5 cursor-pointer hover:underline"
-                    >
-                      <img
-                        src="/images/stack/github.svg"
-                        alt="GitHub Icon"
-                        class="w-4 md:w-5"
-                      />
-                      <p class="caption-500-14">Repository</p>
-                    </div>
+                    <p class="caption-500-14">Repository</p>
                   </a>
-
-                  <a href="https://memomate-six.vercel.app/" target="_blank">
-                    <div
-                      class="flex justify-center items-center gap-1 md:gap-1.5 cursor-pointer hover:underline"
-                    >
-                      <img
-                        src="/images/icons/link-1.svg"
-                        alt="Link Icon"
-                        class="w-4 md:w-5"
-                      />
-                      <p class="caption-500-14">Open link sites</p>
-                    </div>
-                  </a>
-                </div>
-
-                <a
-                  href="/projects/project-details"
-                  class="md:me-10 order-1 my-4 md:my-0"
-                >
-                  <div
-                    class="flex items-center justify-start gap-1 md:gap-1.5 cursor-pointer hover:underline"
-                  >
-                    <p class="caption-500-14">View project</p>
-                    <img
-                      src="/images/icons/arrow-right.svg"
-                      alt="Arrow right icon"
-                      class="w-4 md:w-5"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-
-          <div
-            class="project-card-left flex flex-col md:flex-row items-start md:justify-between gap-4"
-          >
-            <div class="md:w-180 order-2 md:order-1">
-              <h1
-                class="subtitle-600-20 md:subtitle-600-24 mb-1 group-hover:underline"
-              >
-                Mini Library – Book CRUD Application
-              </h1>
-              <h3 class="caption-500-14">
-                A personal portfolio website showcasing projects, GitHub links,
-                and project highlights. Built with HTML5 and Bootstrap.
-              </h3>
-              <div class="flex mt-3 gap-2 md:gap-4">
-                <h3 class="caption-500-14">Tools:</h3>
-                <div class="flex gap-3">
-                  <img
-                    src="/images/stack/html5.svg"
-                    alt="HTML Icon"
-                    class="w-4 md:w-5"
-                  />
-
-                  <img
-                    src="/images/stack/css.svg"
-                    class="w-4 md:w-5"
-                    alt="CSS Icon"
-                  />
-
-                  <img
-                    src="/images/stack/javascript.svg"
-                    class="w-4 md:w-5"
-                    alt="JavaScript Icon"
-                  />
-                </div>
-              </div>
-              <div
-                class="flex flex-col md:flex-row items-start justify-between mt-5"
-              >
-                <div class="flex items-center gap-5 order-2 md:order-1">
                   <a
-                    href="https://github.com/bando9/perpustakaan-mini"
+                    href="https://v1.bandomega.com/"
                     target="_blank"
+                    class="flex items-center gap-1 hover:underline"
                   >
-                    <div
-                      class="flex items-center justify-center gap-1 md:gap-1.5 cursor-pointer hover:underline"
-                    >
-                      <img
-                        src="/images/stack/github.svg"
-                        alt="GitHub Icon"
-                        class="w-4 md:w-5"
-                      />
-                      <p class="caption-500-14">Repository</p>
-                    </div>
-                  </a>
-
-                  <a
-                    href="https://perpustakaan-mini.vercel.app/"
-                    target="_blank"
-                  >
-                    <div
-                      class="flex justify-center items-center gap-1 md:gap-1.5 cursor-pointer hover:underline"
-                    >
-                      <img
-                        src="/images/icons/link-1.svg"
-                        alt="Link Icon"
-                        class="w-4 md:w-5"
-                      />
-                      <p class="caption-500-14">Open link sites</p>
-                    </div>
+                    <img
+                      src="/images/icons/link-1.svg"
+                      alt="Link Icon"
+                      class="w-5"
+                    />
+                    <p class="caption-500-14">Open link sites</p>
                   </a>
                 </div>
 
-                <a
-                  href="/projects/project-details"
-                  class="md:me-10 order-1 my-4 md:my-0"
-                >
-                  <div
-                    class="flex items-center justify-center gap-1 md:gap-1.5 cursor-pointer hover:underline"
-                  >
+                <a href="/projects/project-details" class="order-1 md:order-2">
+                  <div class="flex items-center gap-1 hover:underline">
                     <p class="caption-500-14">View project</p>
                     <img
                       src="/images/icons/arrow-right.svg"
                       alt="Arrow right icon"
-                      class="w-4 md:w-5"
+                      class="w-5"
                     />
                   </div>
                 </a>
               </div>
-            </div>
-            <div class="order-1 mx-auto">
-              <img
-                src="/images/project-3.jpg"
-                alt="Photo Mini Library"
-                class="rounded-lg"
-              />
             </div>
           </div>
         </div>
@@ -469,7 +278,7 @@
         <div class="flex justify-center mt-10 text-center">
           <a href="/projects/">
             <h3
-              class="flex items-center gap-2 cursor-pointer border-1 rounded-lg py-1 px-3 hover:underline"
+              class="flex items-center gap-2 cursor-pointer border rounded-lg py-1 px-3 hover:underline"
             >
               See more projects
               <img
