--- a/index.html
+++ b/index.html
@@ -273,6 +273,168 @@
               </div>
             </div>
           </div>
+
+          <div
+            class="project-card-right flex flex-col md:flex-row items-start md:justify-between gap-6"
+          >
+            <div class="order-1 w-full md:w-1/2">
+              <img
+                src="/images/project-2.jpg"
+                alt="Photo Memomate"
+                class="rounded-lg w-full h-auto"
+              />
+            </div>
+
+            <div class="order-2 md:order-1 md:w-1/2">
+              <h1
+                class="subtitle-600-20 md:subtitle-600-24 mb-2 group-hover:underline"
+              >
+                Memomate – Daily Notes App
+              </h1>
+              <h3 class="caption-500-14">
+                A simple web app for creating and managing daily notes. Built
+                with ReactJS and modular styling.
+              </h3>
+
+              <div class="flex mt-3 gap-2 md:gap-4 items-center">
+                <h3 class="caption-500-14">Tools:</h3>
+                <div class="flex gap-3">
+                  <img
+                    src="/images/stack/react.svg"
+                    alt="HTML Icon"
+                    class="w-5"
+                  />
+                </div>
+              </div>
+
+              <div
+                class="flex flex-col md:flex-row md:items-center md:justify-between mt-5 gap-4"
+              >
+                <div class="flex items-center gap-5 order-2 md:order-1">
+                  <a
+                    href="https://github.com/bando9/memomate"
+                    target="_blank"
+                    class="flex items-center gap-1 hover:underline"
+                  >
+                    <img
+                      src="/images/stack/github.svg"
+                      alt="GitHub Icon"
+                      class="w-5"
+                    />
+                    <p class="caption-500-14">Repository</p>
+                  </a>
+                  <a
+                    href="https://memomate-six.vercel.app/"
+                    target="_blank"
+                    class="flex items-center gap-1 hover:underline"
+                  >
+                    <img
+                      src="/images/icons/link-1.svg"
+                      alt="Link Icon"
+                      class="w-5"
+                    />
+                    <p class="caption-500-14">Open link sites</p>
+                  </a>
+                </div>
+
+                <a href="/projects/project-details" class="order-1 md:order-2">
+                  <div class="flex items-center gap-1 hover:underline">
+                    <p class="caption-500-14">View project</p>
+                    <img
+                      src="/images/icons/arrow-right.svg"
+                      alt="Arrow right icon"
+                      class="w-5"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="project-card-right flex flex-col md:flex-row items-start md:justify-between gap-6"
+          >
+            <div class="order-1 w-full md:w-1/2">
+              <img
+                src="/images/project-3.jpg"
+                alt="Photo Memomate"
+                class="rounded-lg w-full h-auto"
+              />
+            </div>
+
+            <div class="order-2 md:order-1 md:w-1/2">
+              <h1
+                class="subtitle-600-20 md:subtitle-600-24 mb-2 group-hover:underline"
+              >
+                Mini Library – Book CRUD Application
+              </h1>
+              <h3 class="caption-500-14">
+                A personal portfolio website showcasing projects, GitHub links,
+                and project highlights. Built with HTML5 and Bootstrap.
+              </h3>
+
+              <div class="flex mt-3 gap-2 md:gap-4 items-center">
+                <h3 class="caption-500-14">Tools:</h3>
+                <div class="flex gap-3">
+                  <img
+                    src="/images/stack/html5.svg"
+                    alt="HTML Icon"
+                    class="w-5"
+                  />
+
+                  <img src="/images/stack/css.svg" class="w-5" alt="CSS Icon" />
+
+                  <img
+                    src="/images/stack/javascript.svg"
+                    class="w-5"
+                    alt="JavaScript Icon"
+                  />
+                </div>
+              </div>
+
+              <div
+                class="flex flex-col md:flex-row md:items-center md:justify-between mt-5 gap-4"
+              >
+                <div class="flex items-center gap-5 order-2 md:order-1">
+                  <a
+                    href="https://github.com/bando9/perpustakaan-mini"
+                    target="_blank"
+                    class="flex items-center gap-1 hover:underline"
+                  >
+                    <img
+                      src="/images/stack/github.svg"
+                      alt="GitHub Icon"
+                      class="w-5"
+                    />
+                    <p class="caption-500-14">Repository</p>
+                  </a>
+                  <a
+                    href="https://perpustakaan-mini.vercel.app/"
+                    target="_blank"
+                    class="flex items-center gap-1 hover:underline"
+                  >
+                    <img
+                      src="/images/icons/link-1.svg"
+                      alt="Link Icon"
+                      class="w-5"
+                    />
+                    <p class="caption-500-14">Open link sites</p>
+                  </a>
+                </div>
+
+                <a href="/projects/project-details" class="order-1 md:order-2">
+                  <div class="flex items-center gap-1 hover:underline">
+                    <p class="caption-500-14">View project</p>
+                    <img
+                      src="/images/icons/arrow-right.svg"
+                      alt="Arrow right icon"
+                      class="w-5"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
 
         <div class="flex justify-center mt-10 text-center">
